# taktile

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: CMakeLists.txt
include/taktile/: constants.hpp  functions.hpp
scripts/: analyze  test
src/: CMakeLists.txt  constants.cpp  functions.cpp
tests/: CMakeLists.txt  test_functions.cpp
